[package]
name = "iup"
version = "0.0.3"
authors = ["David Campbell <dcampbell24@gmail.com>",
           "Denilson das Mercês Amorim <dma_2012@hotmail.com>"]

[lib]
name = "iup"

[dependencies]
iup-sys = { path = "../sys/iup-sys" }
libc = "0.2"

[dependencies.winapi]
version = "0.3"
features = ["winuser"]
